<resources>
    <string name="app_name">Tanit</string>
    <string name="analyse" translatable="false">Analyse</string>
    <string name="moi" translatable="false">You</string>
    <string name="someil" translatable="false">Sleep Time</string>
    <string name="fertilit" translatable="false">Fertility</string>
    <string name="grosses" translatable="false">Pregnancy</string>
    <string name="sex" translatable="false">Sexe</string>
    <string name="sexe">sexe</string>
    <string name="enregistrer_un_rappel" translatable="false">Add A Callaback</string>
    <string name="about_tanit" translatable="false">About Tanit</string>
    <string name="parametre_du_cycle" translatable="false">Cycle\'s param</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="height">Height</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="weight">Weight</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese class i</string>
    <string name="obese_class_ii">Obese claas ii</string>
    <string name="obese_class_iii">Obese class iii</string>

    <string name="facebook_app_id">331759977343695</string>
    <string name="fb_login_protocol_scheme">fb331759977343695</string>
    <string name="you_have_choosed_to_sigup_with">You have choosed to SigUp with</string>
    <string name="proceed">Proceed</string>
    <string name="update_info">Update Info</string>
    <string name="is_there_any_info_to_update">Is There Any Info To Update ?</string>
    <string name="for_more_accuarate_result_some_more_informations_are_needed">One More Step  </string>
    <string name="cycle_starting_date">Cycle Starting Date</string>
    <string name="cycle_duration">Cycle Duration</string>
    <string name="submit">Submit</string>
    <string name="periode_s_duration">Periode\'s duration</string>
    <string name="most_accuarate_result_avalaible_now_for_you">Most Accuarate Result avalaible now for you.</string>
    <string name="update_your_info_everyday_to_help_us_helping_you">Update your info everyday to help us helping you</string>
    <string name="it_s_coming_down">It\'s coming down</string>
    <string name="it_s_over">It\'s over</string>
    <string name="log_out">Log out</string>


</resources>
