<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_round_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Toolbar

        android:id="@+id/firstLoginToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/WelomeTextView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="30dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:shadowColor="@color/white"
        android:text="Bienvenu , Wafa Labidi "
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/for_more_accuarate_result_some_more_informations_are_needed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/cycleStartingDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffbe76"
        android:clickable="true"
        android:drawableStart="@drawable/ic_calendar"
        android:focusable="true"
        android:hint="@string/cycle_starting_date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <EditText

        android:id="@+id/cycleDuration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#f6e58d"
        android:drawableStart="@drawable/ic_duration"
        android:hint="@string/cycle_duration"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/periodeDuration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#f9ca24"
        android:drawableStart="@drawable/ic_duration"
        android:hint="@string/cycle_duration"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/confirm_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>