<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_calque"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/images" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="4dp"
                android:text="Wafa Labidi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="4dp"
                android:alpha=".7"
                android:text="Aucun Cycle en cours"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_background"
        android:drawableStart="@drawable/alarm"
        android:paddingStart="20dp"
        android:text="@string/parametre_du_cycle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_view_background"
        android:drawableStart="@drawable/rappel"
        android:paddingStart="20dp"
        android:text="@string/enregistrer_un_rappel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_view_background"
        android:drawableStart="@drawable/about"
        android:paddingStart="20dp"
        android:text="@string/about_tanit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/instagram" />

    </LinearLayout>

</LinearLayout>